# Demo-Substrate-1

./: customSpec.json  customSpecRaw.json  node-key
data/node01/chains/kit/db/full/: 000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  MANIFEST-000044  OPTIONS-000035  OPTIONS-000047
data/node02/chains/kit/db/full/: 000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  MANIFEST-000044  OPTIONS-000035  OPTIONS-000047
data/node02/chains/kit/network/: secret_ed25519
data/node03/chains/kit/db/full/: 000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  MANIFEST-000044  OPTIONS-000035  OPTIONS-000047
data/node03/chains/kit/network/: secret_ed25519
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties-market/: Cargo.toml
pallets/kitties-market/src/: lib.rs
pallets/kitties/src/: lib.rs  tests.rs  weights.rs
pallets/kitty/: Cargo.toml
pallets/kitty/rpc/: Cargo.toml
pallets/kitty/rpc/runtime-api/: Cargo.toml
pallets/kitty/rpc/runtime-api/src/: lib.rs
pallets/kitty/rpc/src/: lib.rs
pallets/kitty/src/: benchmarking.rs  kitty.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/key/: Aura1  Aura2  Aura3  Gran1  Gran2  Gran3  run.sh
