[package]
name = "pallet-kitty-rpc-runtime-api"
version = "4.0.0-dev"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
#pallet-kitty = { version = "4.0.0-dev", default-features = false, path = "../.." }

[features]
default = ["std"]
std = [
#	"codec/std",
	"sp-api/std",
#	"pallet-kitty/std",
	"frame-support/std",
]
